--- a/css/cluster.css
+++ b/css/cluster.css
@@ -267,9 +267,6 @@
 		padding: .15em;
 		min-height: 35px;
 		flex: 1 0 calc(50% - 2px - 2em);
-		display: flex;
-		align-items: center;
-		justify-content: center;
 	}
 }
 .cluster main section ul li:first-child{
@@ -296,6 +293,11 @@
 	font-size: .95em;
 	text-decoration: none;
 	color: #242424;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .cluster main section ul li:hover,
 .cluster main section ul li:focus-within,
