--- a/css/cluster.css
+++ b/css/cluster.css
@@ -48,6 +48,12 @@
 		margin-top: 51px;
 		max-width: 700px;
 	}
+	.cluster.zoomcasts main{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: stretch;
+	}
 }
 @media only screen and (min-width: 992px){
 	.cluster main{
@@ -78,6 +84,21 @@
 	.cluster main section{
 		margin: .5em 0 1.5em;
 	}
+}
+@media only screen and (min-width: 768px){
+	.cluster.zoomcasts main{
+		gap: 1em;
+	}
+	.cluster.zoomcasts main section{
+		margin-bottom: 0;
+		flex: 0 0 calc(50% - .5em - 2px);
+	}
+	.cluster.zoomcasts main section:first-child{
+		flex: 1 0 calc(100% - 2px);
+}
+	.cluster.zoomcasts main section:nth-child(2){
+		flex: 1 0 calc(100% - 2px);
+}
 }
 @media only screen and (min-width: 992px){
 	.cluster main section{
