--- a/css/cluster.css
+++ b/css/cluster.css
@@ -59,7 +59,7 @@
 	.cluster main{
 		margin-top: 63px;
 		padding: 0 1em;
-		max-width: 1366px;
+		max-width: calc(1000px + 4em);
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
@@ -101,18 +101,39 @@
 }
 }
 @media only screen and (min-width: 992px){
+	.cluster.zoomcasts main{
+		padding: 0 1.5em;
+		gap: inherit;
+	}
 	.cluster main section{
 		margin: 1em;
+	}
+	.cluster.zoomcasts main section{
+		margin: 1em .5em;
+	}
+	.cluster main section{
 		max-width: 500px;
 		flex: 1 0 calc(50% - 2em - 2px);
 	}
-		.cluster main section:first-child{
+	.cluster.zoomcasts main section{
+		max-width: 333.3px;
+		flex: 1 0 calc(33.3% - 1em - 2px);
+	}
+		.cluster main section:first-child,
+		.cluster.zoomcasts main section:first-child{
 			max-width: 300px;
 			flex: 1 0 calc(27.5% - 2em - 2px);
 	}
-		.cluster main section:nth-child(2){
-			max-width: 600px;
-			flex: 1 0 calc(72.5% - 2em - 2px);
+	.cluster.zoomcasts main section:first-child{
+		margin: 1em;
+}
+	.cluster main section:nth-child(2),
+	.cluster.zoomcasts main section:nth-child(2){
+		max-width: 600px;
+		flex: 1 0 calc(72.5% - 2em - 2px);
+	}
+	.cluster.zoomcasts main section:nth-child(2){
+		margin: 1em
 	}
 }
 .cluster main section h2{
