--- a/css/style.css
+++ b/css/style.css
@@ -135,10 +135,10 @@ html{
   -webkit-text-size-adjust: 100%;
 }
 body{
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	width: 100%;
-	max-width: 100%;
+	max-width: 1366px;
 	/* -moz-osx-font-smoothing: auto;
 	-webkit-font-smoothing: antialiased; */
 }
@@ -707,6 +707,8 @@ nav#navFB{
 	height: 41px;
 	position: fixed;
 	top: 0;
+	left: 50%;
+	transform: translate(-50%, 0);
 	z-index: 20;
 }
 @media only screen and (min-width: 480px){
