--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ main section ul{
 	list-style: none;
 	margin: .75em auto 0;
 	padding: 0;
+	display: -webkit-flex;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
@@ -302,6 +303,7 @@ main section ul{
 	margin: .5em 0;
 }
 .participate div{
+	display: -webkit-flex;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -779,6 +781,7 @@ nav#navFB ul{
 	padding: 0 8px;
 	height: 100%;
 	max-width: 700px;
+	display: -webkit-flex !important;
 	display: flex !important;
 	justify-content: space-between;
 	align-items: center;
