--- a/css/cluster.css
+++ b/css/cluster.css
@@ -73,10 +73,10 @@
 }
 .cluster main section{
 	text-align: center;
-	border: 1px solid #242424;
-	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+	border: 1px solid #242424;
+	border-radius: 5px;
 	margin: 0 auto;
 	width: 100%;
 	display: -webkit-flex;
@@ -99,7 +99,7 @@
 		flex-wrap: wrap;
 	}
 	.cluster.zoomcasts main section{
-		margin-bottom: 0;
+		/* margin-bottom: 0; */
 		flex: 0 0 calc(50%  - .5em - 2px);
 	}
 	.cluster.zoomcasts main section:first-child{
@@ -111,7 +111,7 @@
 }
 @media only screen and (min-width: 992px){
 	.cluster.zoomcasts main{
-		padding: 0 1.5em;
+		/* padding: 0 1.5em; */
 		/* gap: inherit; */
 	}
 	/* .cluster main section{
@@ -133,17 +133,17 @@
 			max-width: 300px;
 			flex: 1 0 calc(27.5% - 2em - 2px);
 	}
-	.cluster.zoomcasts main section:first-child{
+	/* .cluster.zoomcasts main section:first-child{
 		margin: 1em;
-}
+	} */
 	.cluster main section:nth-child(2),
 	.cluster.zoomcasts main section:nth-child(2){
 		max-width: 600px;
 		flex: 1 0 calc(72.5% - 2em - 2px);
 	}
-	.cluster.zoomcasts main section:nth-child(2){
+	/* .cluster.zoomcasts main section:nth-child(2){
 		margin: 1em
-	}
+	} */
 }
 .cluster main section h2{
 	font-size: 1.1em;
@@ -157,9 +157,9 @@
 	-ms-word-break: normal; */
 	color: #fff;
 	border-bottom: 1px solid #242424;
-	border-radius: 4px 4px 0 0;
 	-webkit-border-radius: 4px 4px 0 0;
 	-moz-border-radius: 4px 4px 0 0;
+	border-radius: 4px 4px 0 0;
 	margin: 0;
 	padding: .5em 0;
 }
@@ -167,18 +167,18 @@
 	font-size: 1.5em;
 	white-space: nowrap;
 	border: 3px solid #fff;
-	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
 	margin: 0;
 	padding: 10px;
 	height: 33px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
 }
 .cluster main section p{
 	font-size: .95em;
@@ -265,9 +265,9 @@
 	position: absolute;
 	bottom: 0;
 	left: 50%;
-	transform: translate(-50%, 0);
-	-moz-transform: translate(-50%, 0);
 	-webkit-transform: translate(-50%, 0);
+	-moz-transform: translate(-50%, 0);
+	transform: translate(-50%, 0);
 	opacity: .9;
 }
 .cluster main section div a:hover,
@@ -298,9 +298,9 @@
 	-ms-word-break: normal; */
 	line-height: 1.5em;
 	border: 1px solid #e6e6e6;
-	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
 	margin: 1em 0;
 	padding: .3em;
 	/* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
