--- a/css/cluster.css
+++ b/css/cluster.css
@@ -70,6 +70,9 @@
 		flex-wrap: wrap;
 		gap: 1.5rem;
 	}
+	.cluster.zoomcasts main{
+		gap: 1.5rem;
+	}
 }
 /* ----------------------- */
 .cluster main section{
