--- a/css/cluster.css
+++ b/css/cluster.css
@@ -139,7 +139,7 @@
 	-moz-border-radius: 4px 4px 0 0;
 	border-radius: 4px 4px 0 0;
 	margin: 0;
-	padding: .5em 0;
+	padding: .5em;
 }
 .cluster main section h2#level-2-title{
 	font-size: 1.5em;
