--- a/css/content.css
+++ b/css/content.css
@@ -211,7 +211,7 @@
 	border-radius: 5px;
 	margin: 0;
 	padding: .3em;
-	width: 75%;
+	min-width: 60%;
 	max-width: 650px;
 	position: absolute;
 	top: 50%;
