--- a/css/content.css
+++ b/css/content.css
@@ -112,10 +112,6 @@
 	margin-top: 1.5em;
 	margin-bottom: 1.5em;
 }
-.content main section:first-of-type + section{
-	margin-top: 3em;
-	margin-bottom: 1.5em;
-}
 .content.error404 main section:first-of-type,
 .content.error404 main section:first-of-type p{
 	text-align: center;
@@ -124,14 +120,14 @@
 /* Ratio box adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
 /* 8/10 = 80 | 5/7 = 71.43 | 2/3 = 66.67 | 9/16 = 56.25 */
 .content main .aspect-ratio-box{
-	margin: .75em auto;
+	margin: .75em auto 1.75em;
 	padding: 0;
 	max-width: 700px;
 	position: relative;
 }
 @media only screen and (min-width: 992px){
 	.content main .aspect-ratio-box{
-		margin: 1.25em auto;
+		margin: 1.25em auto 2em;
 		max-width: 900px;
 	}
 }
@@ -341,8 +337,9 @@
 	text-align: center;
 }
 .content main .specs .specs-container{
-	display: inline-block;
+	margin-top: 1rem;
 	text-align: left;
+	display: inline-block;
 }
 .content main .specs .specs-container a.mail,
 .content main .specs .specs-container a.mail:visited{
