--- a/css/content.css
+++ b/css/content.css
@@ -102,9 +102,8 @@
 .content main section,
 .content main section.pathways,
 .content main section.materials,
-.content main section hr + section{
+.content main section.british-japanese{
 	counter-reset: pathways;
-	counter-reset: elements;
 }
 .content main section section{
 	counter-reset: none;
@@ -301,15 +300,17 @@
 	color: inherit;
 }
 .content main section.pathways h4::before,
-.content main section.materials h4::before{
+.content main section.materials h4::before,
+.content main section.british-japanese h5.alternate::before{
   font-variant: normal;
 	counter-increment: pathways;
-  content: counter(pathways, lower-alpha) ") ";
 }
-.content main h6::before{
-  font-variant: normal;
-	counter-increment: elements;
-  content: counter(elements) ") ";
+.content main section.pathways h4::before,
+.content main section.materials h4::before{
+	content: counter(pathways, lower-alpha) ") ";
+}
+.content main section.british-japanese h5.alternate::before{
+  content: counter(pathways) ") ";
 }
 .content main section.pathways strong,
 .content main section.materials strong{
