--- a/css/style.css
+++ b/css/style.css
@@ -568,9 +568,9 @@ h3{
 }
 h4,
 section section h4:first-child{
-	font-size: .95em;
+	font-size: .9em;
 	font-weight: 600;
-	font-style: italic;
+	text-transform: uppercase;
 }
 section h4:first-child{
 	margin-top: 1.5em;
@@ -583,13 +583,11 @@ h5{
 }
 h5.alternate{
 	font-weight: 400;
-}
-h5.alternate em{
 	font-style: normal;
 }
 h6{
 	font-size: 1.1rem;
-	font-weight: 400;
+	font-weight: 600;
 	margin: 2em 0 1em;
 }
 h7{
