--- a/css/content.css
+++ b/css/content.css
@@ -99,6 +99,9 @@
 		max-width: 650px;
 	}
 }
+/* pathways used on seacole lesson plans
+materials used on african lesson plans
+british-japanese used on east asia japanese aesthetics only */
 .content main section,
 .content main section.pathways,
 .content main section.materials,
