--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ body{
 	padding: 0;
 	width: 100%;
 	max-width: 1366px;
+	overflow-x: hidden;
 	/* -moz-osx-font-smoothing: auto;
 	-webkit-font-smoothing: antialiased; */
 }
