--- a/css/style.css
+++ b/css/style.css
@@ -829,7 +829,8 @@ nav#navFB h1{
 	font-size: 1.2rem;
 	white-space: nowrap;
 	border: 2px solid transparent;
-	padding: 2px 5px 0;
+	margin-top: 2px;
+	padding: 0 5px;
 }
 nav#nav1 a:hover h1,
 nav#nav1 a:focus-within h1,
