--- a/css/timeline.css
+++ b/css/timeline.css
@@ -2,6 +2,7 @@
 
 /* Adapted from https://codepen.io/hassan-kamal/pen/NNvYEQ */
 /* Also see https://onaircode.com/html-css-vertical-timeline-examples/ */
+/* Note: The timeline CSS is only used on pages that have a timeline, such as /html/lesson_plans/east_asia_timeline.html */
 
 /* hyperlinks for centuries */
 .timeline-dates{
