u annotation on style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
-/* This CSS file has been developed from the CSS file for Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). The CSS code in the latter is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the code in the file, just be sure to attribute it properly and publicly on your site. */
-
-/* This CSS Main File adapted from One More Voice (https://onemorevoice.org/) */
-
-/* Created and maintained by Adrian S. Wisnicki */ /* 2020-2021 */
+/* This CSS file has been created by Adrian S. Wisnicki (2020-2023) and is adapted from the CSS files for One More Voice (https://onemorevoice.org/) and Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). */
+/* This CSS file, like the ones from which it is adapted, is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the present code, but be sure to attribute it properly and publicly on your site.  */
 
 /* 
 Table of Contents
