u annotation on content.css

--- a/css/content.css
+++ b/css/content.css
@@ -1,4 +1,5 @@
 /* 1.2.2. Content Pages */
+/* Content pages constitute the third level of the Undisciplining Victorian Studies site and consist of the generally text-heavy files that present individual Zoomcasts, lesson plans, syllabi, assessments and various parts of the "About" section. The files are found in the following directories: /html/about, /html/assessments, /html/lesson_plans, /html/syllabi, and /html/zoomcasts */
 
 /* Section-specific colors */
 /* Also see cluster.css and .current on style.css */
